examples/test/testpolicy12396.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12396
  namespace: namespace144
spec:
  podSelector:
    matchLabels:
      key14: value42
      key24: value31
      key22: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value41
          key33: value2
      podSelector:
        matchLabels:
          key14: value41
